# vscode-python-opt

./: .gitattributes  .gitignore  README.md  compose.yaml  environment.yml  manage.py  mypy.ini  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
components/choco/: example.py  golomb_ruler.py  simple.py  twt1.py
components/coinor/: example.py  golomb_ruler.py  simple.py  twt1.py
components/cplex/: example.py  golomb_ruler.py  golomb_ruler_cpo.py  simple.py  twt1.py
components/gurobi/: example.py  golomb_ruler.py  simple.py  twt1.py
components/highs/: example.py  golomb_ruler.py  simple.py  twt1.py
components/ortools/: example.py  golomb_ruler.py  golomb_ruler_cpsat.py  simple.py  twt1.py
components/scip/: example.py  golomb_ruler.py  simple.py  twt1.py
components/xpress/: example.py  golomb_ruler.py  simple.py  twt1.py
docker/: Dockerfile
