[project]
name = "vscode-python-opt"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = [
    "cplex>=22.1.2.0",
    "docplex>=2.31.254",
    "gurobipy>=13.0.1",
    "highspy>=1.13.0",
    "mip>=1.15.0",
    "ortools>=9.15.6755",
    "pychoco>=0.2.6",
    "pyscipopt>=6.1.0",
    "typer>=0.21.1",
    "xpress>=9.8.0",
]
description = "Simple examples of running discrete optimization solvers in Python"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E.*"]

[dependency-groups]
dev = [
    "basedpyright>=1.37.4",
]
