[project]
name = "vscode-python-opt"
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = [
    "cplex>=22.1.2.1",
    "docplex>=2.32.262",
    "gurobipy>=13.0.1",
    "highspy>=1.13.1",
    "mip>=1.17.5",
    "ortools>=9.15.6755",
    "pychoco>=0.2.6",
    "pyscipopt>=6.1.0",
    "typer>=0.24.1",
    "xpress>=9.8.1",
]
description = "Simple examples of running discrete optimization solvers in Python"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E.*"]

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
]
