[project]
name = "vscode-python-opt"
version = "0.1.0"
requires-python = ">= 3.13"
dependencies = [
    "cplex>=22.2.0.0",
    "docplex>=2.32.264",
    "gurobipy>=13.0.2",
    "highspy>=1.14.0",
    "mip>=1.17.6",
    "cffi>=2.0.0",      # Ensures mip builds successfully on Windows
    "ortools>=9.15.6755",
    "pychoco>=0.2.6,<0.3",  # Issues with setup_input_order_lb_search()
    "pyscipopt>=6.2.1",
    "typer>=0.26.7",
    "xpress>=9.9.0",
]
description = "Simple examples of running discrete optimization solvers in Python"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E.*"]

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
]
